--- a/client/package.json
+++ b/client/package.json
@@ -13,12 +13,25 @@
     "@clerk/clerk-react": "^5.2.7",
     "@google/generative-ai": "^0.15.0",
     "@tanstack/react-query": "^5.51.9",
+    "highlight.js": "^11.11.1",
     "imagekitio-react": "^4.1.0",
+    "katex": "^0.16.21",
+    "katex-react": "^3.0.0",
     "react": "19.0.0-rc-8b08e99e-20240713",
     "react-dom": "19.0.0-rc-8b08e99e-20240713",
+    "react-katex": "^3.0.1",
     "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.0",
-    "react-type-animation": "^3.2.0"
+    "react-syntax-highlighter": "^15.6.1",
+    "react-type-animation": "^3.2.0",
+    "rehype-add-classes": "^1.0.0",
+    "rehype-highlight": "^7.0.1",
+    "rehype-katex": "^7.0.1",
+    "rehype-prism-plus": "^2.0.0",
+    "rehype-raw": "^7.0.0",
+    "remark-gfm": "^4.0.0",
+    "remark-math": "^6.0.0",
+    "unist-util-visit": "^5.0.0"
   },
   "devDependencies": {
     "@types/react": "^18.3.3",
